--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+<!--   test -->
   <meta charset="utf-8">
   <title>Market</title>
-  <base href="/index.html">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
